--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Pokedex 2.0</title>
   </head>
-  <body>
+  <body class="page">
+    <h1 class="page__title">Pokedex</h1>
+    <ul class="page__pokemon-list"></ul>
     <script src="js/scripts.js"></script>
   </body>
 </html>
