--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body class="page">
     <h1 class="page__title">Pokedex</h1>
     <ul class="page__pokemon-list"></ul>
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch.umd.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
