add stats bar and styles

--- a/index.html
+++ b/index.html
@@ -55,6 +55,57 @@
               <li class="ability">hello</li>
               <li class="ability">world</li>
             </ul>
+            <h3 class="modal__stats-title">Stats</h3>
+            <section class="modal__stats">
+              <div class="stat">
+                <p>Hp</p>
+                <div class="stat-bar">
+                  <div class="stat-bar__inside" data-stat="hp"></div>
+                </div>
+                <p>100</p>
+              </div>
+              <div class="stat">
+                <p>Attack</p>
+                <div class="stat-bar">
+                  <div class="stat-bar__inside" data-stat="attack"></div>
+                </div>
+                <p>100</p>
+              </div>
+              <div class="stat">
+                <p>Defense</p>
+                <div class="stat-bar">
+                  <div class="stat-bar__inside" data-stat="defense"></div>
+                </div>
+                <p>100</p>
+              </div>
+              <div class="stat">
+                <p>Special Attack</p>
+                <div class="stat-bar">
+                  <div
+                    class="stat-bar__inside"
+                    data-stat="special-attack"
+                  ></div>
+                </div>
+                <p>100</p>
+              </div>
+              <div class="stat">
+                <p>Special Defense</p>
+                <div class="stat-bar">
+                  <div
+                    class="stat-bar__inside"
+                    data-stat="special-defense"
+                  ></div>
+                </div>
+                <p>100</p>
+              </div>
+              <div class="stat">
+                <p>Speed</p>
+                <div class="stat-bar">
+                  <div class="stat-bar__inside" data-stat="speed"></div>
+                </div>
+                <p>100</p>
+              </div>
+            </section>
           </div>
         </div>
       </div>
