--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       rel="icon"
       type="image/x-icon"
     />
-    <!-- <link rel="stylesheet" href="dist/css/style.production.css" /> -->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="dist/css/style.production.css" />
     <title>Pokedex 2.0</title>
   </head>
   <body>
@@ -70,7 +69,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="js/scripts.js"></script>
-    <!-- <script src="dist/js/min.scripts.js"></script> -->
+    <script src="dist/js/min.scripts.js"></script>
   </body>
 </html>
